--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+:root {
+  --blue-light-1: #fff;
+  --blue-light-2: #8DA0BC;
+  --blue-medium-1: #4F6B95; /*text category*/
+  --blue-medium-2: #007AFF; /* button background*/
+  --blue-medium-3: #1e2747;
+  --blue-dark-1: #141A32; /*button category*/
+  --blue-dark-2: #080F28; /*fondo*/
+  --blue-gradient: linear-gradient(to bottom, rgba(20,26,50,0) 0%,rgba(20,26,50,0.01) 1%,rgba(20,26,50,1) 100%);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +15,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--blue-dark-2);
 }
 
 code {
