--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --blue-gradient: linear-gradient(to bottom, rgba(20,26,50,0) 0%,rgba(20,26,50,0.01) 1%,rgba(20,26,50,1) 100%);
 }
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -18,6 +18,11 @@ body {
   background-color: var(--blue-dark-2);
 }
 
+#root {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
